syntax = "proto3";

package loms;

option go_package = "https://gitlab.ozon.dev/genius4666/homework/loms/internal/pkg/loms";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Loms {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse){
        option (google.api.http) = {
            post: "/createOrder"
            body: "*"
        };
    }
    rpc ListOrder(ListOrderRequest) returns (ListOrderResponse){
        option (google.api.http) = {
            post: "/listOrder"
            body: "*"
        };
    }
    rpc OrderPayed(OrderPayedRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/orderPayed"
            body: "*"
        };
    }
    rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/cancelOrder"
            body: "*"
        };
    }
    rpc Stocks(StocksRequest) returns (StocksResponse){
        option (google.api.http) = {
            post: "/stocks"
            body: "*"
        };
    }
}

message CreateOrderRequest {
    int64 user = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
    repeated Item items = 2 [(validate.rules).repeated = {min_items: 1}];
}

message Item {
    uint32 sku = 1 [(validate.rules).uint32 = {gte: 1,  lte: 4294967295}];
    uint32 count = 2 [(validate.rules).uint32 = {gte: 1,  lte: 65535}];
}

message CreateOrderResponse {
    int64 order_id = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
}

message ListOrderRequest {
    int64 order_id = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
}

message ListOrderResponse {
    string status = 1;
    int64 user = 2 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
    repeated Item items = 3 [(validate.rules).repeated = {min_items: 1}];
}

message OrderPayedRequest {
    int64 order_id = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
}

message CancelOrderRequest {
    int64 order_id = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
}

message StocksRequest {
    uint32 sku = 1 [(validate.rules).uint32 = {gte: 1,  lte: 4294967295}];

}

message StocksResponse {
    repeated Stock stocks = 1;
}

message Stock {
    int64 warehouse_id = 1 [(validate.rules).int64 = {gte: 1,  lte: 9223372036854775807}];
    uint64 count = 2 [(validate.rules).uint64 = {gte: 1,  lte: 18446744073709551615}];
}